# py_tools

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  REFACTORING_PLAN.md  __init__.py  aim.py  baseline_compustat_dealscan.py  bootstrap.py  bvar.py  chebyshev.py  collapser.py  config_registry.py  containers.py  create_comp_ds_data.py  create_comp_ds_quarterly.py  data.py  debug.py  discrete.py  econ.py  estimation.py  event_study_comp_ds.py  financial.py  flatten.py  format_code.py  gmm.py  hidden_markov.py  in_out.py  inequality.py  kalman.py  learn.py  load_comp_ind.py  local_projections.py  lp_group.py  machine_learning.py  match.py  math.py  mcmc.py  (+22 more)
.github/workflows/: test.yml
bayesian/: __init__.py  mcmc.py  prior.py
compute/: __init__.py  mpi_array.py
config/: __init__.py  modspec.py  registry.py
data/: __init__.py  collapser.py  core.py  match.py
datasets/: __init__.py  ahs.py  bea_industry.py  census.py  cfpb.py  compustat.py  config.py  crosswalk.py  crsp.py  defaults.py  dfa.py  download_ahs.py  download_data.py  ds_comp_merge.py  embs.py  fama_bliss.py  fannie.py  fhfa.py  fof.py  fred.py  french.py  frm_server.py  gse.py  hmda.py  intraday.py  irs.py  ita.py  jst.py  load.py  loader.py  mba.py  misc.py  nipa.py  origins.py  qd.py  ramey.py  rental.py  romer.py  saez.py  shiller.py  (+4 more)
discrete_solve_cl/: argmax.cpp  discrete.cpp  solve_dense.cpp  solve_sparse.cpp
discrete_solve_cl/save/: Pz.out  V.out  flow.out
econ/: __init__.py  aim.py  core.py  discrete.py  financial.py
econometrics/: __init__.py  bootstrap.py  estimation.py  gmm.py  local_projections.py  machine_learning.py  reghdfe.py
examples/: argmax.py  simple_discrete.py  test_discrete.py  test_mcmc.py  test_state_space.py
in_out/: __init__.py  core.py  stata.py
numerical/: __init__.py  chebyshev.py  core.py  newton.py
old/: hidden_markov_old.py
plot/: __init__.py  core.py
scraping/: __init__.py  scrape.py
stats/: __init__.py  core.py  inequality.py  walker.py
test/: argmax.py  simple_discrete.py  test_discrete.py  test_mcmc.py  test_state_space.py
tests/: conftest.py  test_bayesian_mcmc.py  test_bayesian_prior.py  test_data_collapser.py  test_data_core.py  test_data_match.py  test_datasets_fhfa.py  test_econ_aim.py  test_econ_core.py  test_econ_discrete.py  test_econ_financial.py  test_econometrics_bootstrap.py  test_econometrics_estimation.py  test_econometrics_gmm.py  test_econometrics_local_projections.py  test_econometrics_reghdfe.py  test_in_out_core.py  test_numerical_chebyshev.py  test_numerical_core.py  test_numerical_newton.py  test_plot_core.py  test_scraping_scrape.py  test_stats_core.py  test_stats_inequality.py  test_stats_walker.py  test_text_core.py  test_text_flatten.py  test_text_parsing.py  test_time_series_bvar.py  test_time_series_core.py  test_time_series_hidden_markov.py  test_time_series_state_space.py  test_time_series_var.py  test_utilities.py
text/: __init__.py  core.py  flatten.py  format_code.py  parsing.py
time_series/: __init__.py  bvar.py  core.py  hidden_markov.py  state_space.py  var.py
utilities/: __init__.py  containers.py  core.py
