[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_tools"
version = "0.1.0"
description = "Numerical economics and research utilities."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3,<3",
    "scipy>=1.8",
    "matplotlib>=3.5",
    "statsmodels>=0.13",
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "pandas-datareader>=0.10",
    "tabulate>=0.9",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.1",
    "patsy>=0.5",
]
mpi = ["mpi4py>=3.1"]
scraping = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "pandas-datareader>=0.10",
]
nlp = ["nltk>=3.7"]
gpu = [
    "pyopencl>=2022.3",
    "pyviennacl>=1.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
]
all = [
    "scikit-learn>=1.1",
    "patsy>=0.5",
    "mpi4py>=3.1",
    "nltk>=3.7",
    "pyopencl>=2022.3",
    "pyviennacl>=1.7",
]

[tool.setuptools]
packages = ["py_tools", "py_tools.datasets"]

[tool.setuptools.package-dir]
py_tools = "."
"py_tools.datasets" = "datasets"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = [
    "examples",
    "old",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]
