[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py_tools"
version = "0.1.0"
description = "Numerical economics and research utilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.8",
    "matplotlib>=3.5",
    "statsmodels>=0.13",
    "requests>=2.28",
    "tabulate>=0.9",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.1",
    "patsy>=0.5",
]
mpi = ["mpi4py>=3.1"]
datasets = [
    "pandas-datareader>=0.10",
    "python-dotenv>=1.0",
    "pandas<3",
]
scraping = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
]
nlp = ["nltk>=3.7"]
gpu = [
    "pyopencl>=2022.3",
    "pyviennacl>=1.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=6.0",
]
all = [
    "scikit-learn>=1.1",
    "patsy>=0.5",
    "mpi4py>=3.1",
    "pandas-datareader>=0.10",
    "python-dotenv>=1.0",
    "pandas<3",
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    "nltk>=3.7",
    "pyopencl>=2022.3",
    "pyviennacl>=1.7",
]

[tool.setuptools]
packages = ["py_tools", "py_tools.bayesian", "py_tools.config", "py_tools.compute", "py_tools.data", "py_tools.datasets", "py_tools.econometrics", "py_tools.econ", "py_tools.in_out", "py_tools.numerical", "py_tools.plot", "py_tools.scraping", "py_tools.stats", "py_tools.text", "py_tools.time_series", "py_tools.utilities"]

[tool.setuptools.package-dir]
py_tools = "."
"py_tools.bayesian" = "bayesian"
"py_tools.config" = "config"
"py_tools.compute" = "compute"
"py_tools.data" = "data"
"py_tools.datasets" = "datasets"
"py_tools.econometrics" = "econometrics"
"py_tools.econ" = "econ"
"py_tools.in_out" = "in_out"
"py_tools.numerical" = "numerical"
"py_tools.plot" = "plot"
"py_tools.scraping" = "scraping"
"py_tools.stats" = "stats"
"py_tools.text" = "text"
"py_tools.time_series" = "time_series"
"py_tools.utilities" = "utilities"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
python_files = ["test_*.py"]
norecursedirs = [
    "examples",
    "old",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]
